HTML docs: Fix up remaining notes, part 1

--- a/files/en-us/web/html/element/acronym/index.html
+++ b/files/en-us/web/html/element/acronym/index.html
@@ -16,8 +16,8 @@ browser-compat: html.elements.acronym
 
 <p>The <strong><code>&lt;acronym&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element allows authors to clearly indicate a sequence of characters that compose an acronym or abbreviation for a word.</p>
 
-<div class="note">
-<p><strong>Usage note:</strong> This element has been removed in HTML5 and shouldn't be used anymore. Instead web developers should use the {{HTMLElement("abbr")}} element.</p>
+<div class="warning">
+<p><strong>Warning:</strong> Don't use this element. Use the {{HTMLElement("abbr")}} element instead.</p>
 </div>
 
 <h2 id="Attributes">Attributes</h2>
@@ -27,8 +27,6 @@ browser-compat: html.elements.acronym
 <h2 id="DOM_Interface">DOM Interface</h2>
 
 <p>This element implements the {{domxref('HTMLElement')}} interface.</p>
-
-<div class="note"><strong>Implementation note:</strong> Up to Gecko 1.9.2 inclusive, Firefox implements the {{domxref('HTMLSpanElement')}} interface for this element.</div>
 
 <h2 id="Example">Example</h2>
 
