--- a/files/en-us/web/html/element/bgsound/index.html
+++ b/files/en-us/web/html/element/bgsound/index.html
@@ -17,8 +17,8 @@ browser-compat: html.elements.bgsound
 
 <p>The <strong><code>&lt;bgsound&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element is deprecated. It sets up a sound file to play in the background while the page is used; use {{HTMLElement("audio")}} instead.</p>
 
-<div class="note">
-<p><strong>Do not use this! </strong>In order to embed audio in a Web page, you should be using the {{HTMLElement("audio")}} element.</p>
+<div class="warning">
+<p><strong>Warning:</strong> Do not use this! In order to embed audio in a Web page, you should be using the {{HTMLElement("audio")}} element.</p>
 </div>
 
 <h2 id="Attributes">Attributes</h2>
