--- a/files/en-us/web/html/element/big/index.html
+++ b/files/en-us/web/html/element/big/index.html
@@ -13,8 +13,8 @@ browser-compat: html.elements.big
 
 <p>The <strong><code>&lt;big&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> deprecated element renders the enclosed text at a font size one level larger than the surrounding text (<code>medium</code> becomes <code>large</code>, for example). The size is capped at the browser's maximum permitted font size.</p>
 
-<div class="note">
-<p><strong>Usage note:</strong> As it was purely presentational, this element has been removed in {{Glossary("HTML5")}} and shouldn't be used anymore. Instead web developers should use the CSS {{cssxref("font-size")}} property to adjust the font size.</p>
+<div class="warning">
+<p><strong>Warning:</strong> This element has been removed from the specification and shouldn't be used any more. Use the CSS {{cssxref("font-size")}} property to adjust the font size.</p>
 </div>
 
 <h2 id="Attributes">Attributes</h2>
@@ -64,8 +64,6 @@ browser-compat: html.elements.big
 <h2 id="DOM_interface">DOM interface</h2>
 
 <p>This element implements the {{domxref('HTMLElement')}} interface.</p>
-
-<div class="note"><strong>Implementation note:</strong> Up to Gecko 1.9.2 inclusive, Firefox implements the {{domxref('HTMLSpanElement')}} interface for this element.</div>
 
 <h2 id="Specifications">Specifications</h2>
 
