--- a/files/en-us/web/html/element/fieldset/index.html
+++ b/files/en-us/web/html/element/fieldset/index.html
@@ -29,7 +29,7 @@ browser-compat: html.elements.fieldset
  <dd>This attribute takes the value of the {{htmlattrxref("id")}} attribute of a {{HTMLElement("form")}} element you want the <code>&lt;fieldset&gt;</code> to be part of, even if it is not inside the form. Please note that usage of this is confusing — if you want the {{HTMLElement("input")}} elements inside the <code>&lt;fieldset&gt;</code> to be associated with the form, you need to use the <code>form</code> attribute directly on those elements. You can check which elements are associated with a form via JavaScript, using {{domxref("HTMLFormElement.elements")}}.</dd>
  <dt>{{htmlattrdef("name")}}</dt>
  <dd>The name associated with the group.
- <div class="note"><strong>Note</strong>: The caption for the fieldset is given by the first {{HTMLElement("legend")}} element nested inside it.</div>
+ <div class="note"><p><strong>Note:</strong> The caption for the fieldset is given by the first {{HTMLElement("legend")}} element nested inside it.</p></div>
  </dd>
 </dl>
 
