--- a/files/en-us/web/html/element/input/image/index.html
+++ b/files/en-us/web/html/element/input/image/index.html
@@ -62,7 +62,7 @@ browser-compat: html.elements.input.input-image
 <p>For example, if you have a graphical button that shows an image with an icon and/or image text "Login Now", you should also set the <code>alt</code> attribute to something like <code>Login Now</code>.</p>
 
 <div class="note">
-<p><strong>Important:</strong> While the <code>alt</code> attribute is technically optional, you should always include one to maximize the usability of your content.</p>
+<p><strong>Note:</strong> While the <code>alt</code> attribute is technically optional, you should always include one to maximize the usability of your content.</p>
 </div>
 
 <p>Functionally, the <code>&lt;input type="image"&gt;</code> <code>alt</code> attribute works just like the {{htmlattrxref("alt", "img")}} attribute on {{HTMLElement("img")}} elements.</p>
