--- a/files/en-us/web/html/element/meta/name/index.html
+++ b/files/en-us/web/html/element/meta/name/index.html
@@ -72,7 +72,7 @@ browser-compat: html.elements.meta.name
    </tbody>
   </table>
 
-  <div class="note"><strong>Notes:</strong>
+  <div class="note"><p><strong>Note:</strong></p>
 
   <ul>
    <li>Dynamically inserting <code>&lt;meta name="referrer"&gt;</code> (with {{domxref("Document.write", "document.write()")}} or {{domxref("Node.appendChild", "appendChild()")}}) makes the referrer behavior unpredictable.</li>
@@ -167,7 +167,7 @@ browser-compat: html.elements.meta.name
    </tbody>
   </table>
 
-  <div class="note"><strong>Notes:</strong>
+  <div class="note"><p><strong>Note:</strong></p>
 
   <ul>
    <li>Though unstandardized, this declaration is respected by most mobile browsers due to de-facto dominance.</li>
@@ -263,7 +263,7 @@ browser-compat: html.elements.meta.name
    </tbody>
   </table>
 
-  <div class="note"><strong>Notes:</strong>
+  <div class="note"><p><strong>Note:</strong></p>
 
   <ul>
    <li>Only cooperative robots follow these rules. Do not expect to prevent e-mail harvesters with them.</li>
