--- a/files/en-us/web/html/element/plaintext/index.html
+++ b/files/en-us/web/html/element/plaintext/index.html
@@ -15,7 +15,7 @@ browser-compat: html.elements.plaintext
 
 <p>The <strong><code>&lt;plaintext&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element renders everything following the start tag as raw text, ignoring any following HTML. There is no closing tag, since everything after it is considered raw text.</p>
 
-<div class="note"><p><strong>Note:</strong> Do not use this element.</p>
+<div class="warning"><p><strong>Warning:</strong> Do not use this element.</p>
 
 <ul>
  <li><code>&lt;plaintext&gt;</code> is deprecated since HTML 2, and not all browsers implemented it. Browsers that did implement it didn't do so consistently.</li>
@@ -33,10 +33,6 @@ browser-compat: html.elements.plaintext
 <h2 id="DOM_interface">DOM interface</h2>
 
 <p>This element implements the {{domxref('HTMLElement')}} interface.</p>
-
-<div class="note">
-<p><strong>Implementation note:</strong> In Gecko 1.9.2 and before, Firefox implements the interface {{domxref('HTMLSpanElement')}} for this element.</p>
-</div>
 
 <h2 id="Specifications">Specifications</h2>
 
