--- a/files/en-us/web/html/element/q/index.html
+++ b/files/en-us/web/html/element/q/index.html
@@ -55,7 +55,7 @@ browser-compat: html.elements.q
 </table>
 
 <div class="note">
-<p><strong>Usage note:</strong> Most modern browsers will automatically add quotation marks around text inside a <code>&lt;q&gt;</code> element. A style rule may be needed to add quotation marks in older browsers.</p>
+<p><strong>Note:</strong> Most modern browsers will automatically add quotation marks around text inside a <code>&lt;q&gt;</code> element. A style rule may be needed to add quotation marks in older browsers.</p>
 </div>
 
 <h2 id="Attributes">Attributes</h2>
