--- a/files/en-us/web/html/element/strike/index.html
+++ b/files/en-us/web/html/element/strike/index.html
@@ -13,8 +13,8 @@ browser-compat: html.elements.strike
 
 <p>The <strong><code>&lt;strike&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element places a strikethrough (horizontal line) over text.</p>
 
-<div class="notecard note">
-<p><strong>Usage note:</strong> This element is deprecated in HTML 4 and XHTML 1, and obsoleted in HTML5. If semantically appropriate, i.e., if it represents <em>deleted</em> content, use {{HTMLElement("del")}} instead. In all other cases use {{HTMLElement("s")}}.</p>
+<div class="notecard warning">
+<p><strong>Warning:</strong> This element is deprecated in HTML 4 and XHTML 1, and obsoleted in HTML5. If semantically appropriate, i.e., if it represents <em>deleted</em> content, use {{HTMLElement("del")}} instead. In all other cases use {{HTMLElement("s")}}.</p>
 </div>
 
 <table class="properties">
