--- a/files/en-us/web/html/element/tt/index.html
+++ b/files/en-us/web/html/element/tt/index.html
@@ -24,7 +24,7 @@ browser-compat: html.elements.tt
 
 <p>This element is obsolete, however. You should use the more semantically helpful {{HTMLElement("code")}}, {{HTMLElement("kbd")}}, {{HTMLElement("samp")}}, or {{HTMLElement("var")}} elements for inline text that needs to be presented in monospace type, or the {{HTMLElement("pre")}} tag for content that should be presented as a separate block.</p>
 
-<div class="note">If none of the semantic elements are appropriate for your use case (for example, if you need to show some content in a non-proportional font), you should consider using the {{ HTMLElement("span") }} element, styling it as desired using CSS. The {{cssxref("font-family")}} property is a good place to start.</div>
+<div class="note"><p><strong>Note:</strong> If none of the semantic elements are appropriate for your use case (for example, if you need to show some content in a non-proportional font), you should consider using the {{ HTMLElement("span") }} element, styling it as desired using CSS. The {{cssxref("font-family")}} property is a good place to start.</p></div>
 
 <table class="properties">
  <tbody>
@@ -100,7 +100,7 @@ The telnet client should display: &lt;tt&gt;Local Echo is on&lt;/tt&gt;&lt;/p&gt
 <p>The <code>&lt;tt&gt;</code> element is, by default, rendered using the browser's default non-proportional font. You can override this using CSS by creating a rule using the <code>tt</code> selector, as seen in the example {{anch("Overriding the default font")}} above.</p>
 
 <div class="note">
-<p>User-configured changes to the default monospace font setting may take precedence over your CSS.</p>
+<p><strong>Note:</strong> User-configured changes to the default monospace font setting may take precedence over your CSS.</p>
 </div>
 
 <p>Although this element wasn't officially deprecated in HTML 4.01, its use was discouraged in favor of the semantic elements and/or CSS. The <code>&lt;tt&gt;</code> element is obsolete in HTML 5.</p>
