--- a/files/en-us/web/html/global_attributes/autofocus/index.html
+++ b/files/en-us/web/html/global_attributes/autofocus/index.html
@@ -17,8 +17,7 @@ browser-compat: html.global_attributes.autofocus
 <p>No more than one element in the document or dialog may have the autofocus attribute. If applied to multiple elements the first one will receive focus.</p>
 
 <div class="notecard note">
-  <h4>Note:</h4>
-  <p>The <code>autofocus</code> attribute applies to all elements, not just form controls. For example, it might be used on a <a href="/en-US/docs/Web/HTML/Global_attributes/contenteditable">contenteditable</a> area.</p>
+  <p><strong>Note:</strong> The <code>autofocus</code> attribute applies to all elements, not just form controls. For example, it might be used on a <a href="/en-US/docs/Web/HTML/Global_attributes/contenteditable">contenteditable</a> area.</p>
 </div>
 
 <h2 id="Accessibility_considerations">Accessibility considerations</h2>
