--- a/files/en-us/web/html/attributes/disabled/index.html
+++ b/files/en-us/web/html/attributes/disabled/index.html
@@ -19,7 +19,7 @@ tags:
 <p>This Boolean disabled attribute indicates that the user cannot interact with the control or its descendant controls. If this attribute is not specified, the control inherits its setting from the containing element, for example <code>fieldset</code>; if there is no containing element with the <code>disabled</code> attribute set, and the control itself does not have the attribute, then the control is enabled. If declared on an {{ HTMLElement("optgroup") }}, the select is still interactive (unless otherwise disabled), but none of the items in the option group are selectable.</p>
 
 <div class="notecard note">
-<p>Note: If a {{ HTMLElement("fieldset") }} is disabled, the descendant form controls are all disabled, with the exception of form controls within the {{ HTMLElement("legend") }}.</p>
+<p><strong>Note:</strong> If a {{ HTMLElement("fieldset") }} is disabled, the descendant form controls are all disabled, with the exception of form controls within the {{ HTMLElement("legend") }}.</p>
 </div>
 
 <p>When a supporting element has the <code>disabled</code> attribute applied, the {{cssxref(":disabled")}} pseudo-class also applies to it. Conversely, elements that support the <code>disabled</code> attribute but don't have the attribute set match the {{cssxref(":enabled")}} pseudo-class.</p>
