--- a/files/en-us/web/html/attributes/required/index.html
+++ b/files/en-us/web/html/attributes/required/index.html
@@ -23,7 +23,7 @@ tags:
 <p>In the case of a same named group of {{HTMLElement("input/checkbox","checkbox")}} input types, only the checkboxes with the <code>required</code> attribute are required.</p>
 
 <div class="notecard note">
-<p>Note: Setting <code><a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-required_attribute">aria-required</a>="true"</code> tells a screen reader that an element (any element) is required, but has no bearing on the optionality of the element.</p>
+<p><strong>Note:</strong> Setting <code><a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-required_attribute">aria-required</a>="true"</code> tells a screen reader that an element (any element) is required, but has no bearing on the optionality of the element.</p>
 </div>
 
 <h3 id="Attribute_interactions">Attribute interactions</h3>
