--- a/files/en-us/web/html/element/link/index.html
+++ b/files/en-us/web/html/element/link/index.html
@@ -90,7 +90,7 @@ browser-compat: html.elements.link
      <p>fetch, XHR</p>
 
      <div class="notecard note">
-     <p>This value also requires <code>&lt;link&gt;</code> to contain the crossorigin attribute.</p>
+     <p><strong>Note:</strong> This value also requires <code>&lt;link&gt;</code> to contain the crossorigin attribute.</p>
      </div>
     </td>
    </tr>
@@ -157,7 +157,7 @@ browser-compat: html.elements.link
  <dt>{{HTMLAttrDef("media")}}</dt>
  <dd>This attribute specifies the media that the linked resource applies to. Its value must be a media type / <a href="/en-US/docs/Web/CSS/Media_Queries">media query</a>. This attribute is mainly useful when linking to external stylesheets — it allows the user agent to pick the best adapted one for the device it runs on.
  <div class="notecard note">
- <p><strong>Notes:</strong></p>
+ <p><strong>Note:</strong></p>
 
  <ul>
   <li>In HTML 4, this can only be a simple white-space-separated list of media description literals, i.e., <a href="/en-US/docs/Web/CSS/@media">media types and groups</a>, where defined and allowed as values for this attribute, such as <code>print</code>, <code>screen</code>, <code>aural</code>, <code>braille</code>. HTML5 extended this to any kind of <a href="/en-US/docs/Web/CSS/Media_Queries">media queries</a>, which are a superset of the allowed values of HTML 4.</li>
@@ -210,7 +210,7 @@ browser-compat: html.elements.link
 <dl>
  <dt>{{HTMLAttrDef("charset")}} {{deprecated_inline}}</dt>
  <dd>This attribute defines the character encoding of the linked resource. The value is a space- and/or comma-delimited list of character sets as defined in {{rfc(2045)}}. The default value is <code>iso-8859-1</code>.
- <div class="note"><strong>Usage note:</strong> To produce the same effect as this obsolete attribute, use the {{HTTPHeader("Content-Type")}} HTTP header on the linked resource.</div>
+ <div class="note"><p><strong>Note:</strong> To produce the same effect as this obsolete attribute, use the {{HTTPHeader("Content-Type")}} HTTP header on the linked resource.</p></div>
  </dd>
  <dt>{{HTMLAttrDef("rev")}} {{deprecated_inline}}</dt>
  <dd><p>The value of this attribute shows the relationship of the current document to the linked document, as defined by the {{HTMLAttrxRef("href", "link")}} attribute. The attribute thus defines the reverse relationship compared to the value of the <code>rel</code> attribute. <a href="/en-US/docs/Web/HTML/Link_types">Link type values</a> for the attribute are similar to the possible values for {{HTMLAttrxRef("rel", "link")}}.</p>
