--- a/files/en-us/web/html/element/menu/index.html
+++ b/files/en-us/web/html/element/menu/index.html
@@ -23,8 +23,7 @@ browser-compat: html.elements.menu
 <p>The <strong><code>&lt;menu&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element is a semantic alternative to {{HTMLElement("ul")}}. It represents an unordered list of items (represented by {{HTMLElement("li")}} elements), each of these represent a link or other command that the user can activate.</p>
 
 <div class="notecard note">
-  <h4>Note:</h4>
-  <p>In previous version of the HTML specification, the <code>&lt;menu&gt;</code> element had an additional use case as a context menu. This functionality is now considered obsolete, and has been removed from the specification. Firefox was the only browser to implement this functionality which included the {{HTMLAttrDef("label")}} {{Deprecated_inline}} and <code>context</code> {{Deprecated_inline}} attributes. </p>
+  <p><strong>Note:</strong> In previous version of the HTML specification, the <code>&lt;menu&gt;</code> element had an additional use case as a context menu. This functionality is now considered obsolete, and has been removed from the specification. Firefox was the only browser to implement this functionality which included the {{HTMLAttrDef("label")}} {{Deprecated_inline}} and <code>context</code> {{Deprecated_inline}} attributes. </p>
 </div>
 
 <table class="properties">
@@ -79,7 +78,7 @@ browser-compat: html.elements.menu
 <p>In this example, a <code>&lt;menu&gt;</code> is used to create a toolbar in an editing application.</p>
 
 <div class="notecard warning">
-<p>Toolbar menus haven't been implemented in any known browsers yet.</p>
+<p><strong>Warning:</strong> Toolbar menus haven't been implemented in any known browsers yet.</p>
 </div>
 
 <h4 id="HTML_3">HTML</h4>
