--- a/files/en-us/web/html/element/thead/index.html
+++ b/files/en-us/web/html/element/thead/index.html
@@ -68,7 +68,7 @@ browser-compat: html.elements.thead
 
  <p>If this attribute is not set, the <code>left</code> value is assumed.</p>
 
- <div class="note"><p><strong>Note:</strong> Do not use this attribute as it is obsolete (not supported) in the latest standard.</p>
+ <div class="warning"><p><strong>Warning:</strong> Do not use this attribute as it is obsolete (not supported) in the latest standard.</p>
 
  <ul>
   <li>To achieve the same effect as the <code>left</code>, <code>center</code>, <code>right</code> or <code>justify</code> values, use the CSS {{cssxref("text-align")}} property on it.</li>
@@ -97,7 +97,7 @@ browser-compat: html.elements.thead
   <li><code>aqua</code> = "#00FFFF"</li>
  /ul>
 
- <div class="note"><strong>Usage note:</strong> Do not use this attribute, as it is non-standard and only implemented in some versions of Microsoft Internet Explorer: the {{HTMLElement("thead")}} element should be styled using <a href="/en-US/docs/Web/CSS">CSS</a>. To give a similar effect to the <strong>bgcolor</strong> attribute, use the <a href="/en-US/docs/Web/CSS">CSS</a> property {{cssxref("background-color")}}, on the relevant {{HTMLElement("td")}} or {{HTMLElement("th")}} elements.</div>
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute, as it is non-standard and only implemented in some versions of Microsoft Internet Explorer: the {{HTMLElement("thead")}} element should be styled using <a href="/en-US/docs/Web/CSS">CSS</a>. To give a similar effect to the <strong>bgcolor</strong> attribute, use the <a href="/en-US/docs/Web/CSS">CSS</a> property {{cssxref("background-color")}}, on the relevant {{HTMLElement("td")}} or {{HTMLElement("th")}} elements.</p></div>
  </dd>
  <dt>{{htmlattrdef("char")}} {{deprecated_inline}}</dt>
  <dd>This attribute is used to set the character to align the cells in a column on. Typical values for this include a period (.) when attempting to align numbers or monetary values. If {{htmlattrxref("align", "thead")}} is not set to <code>char</code>, this attribute is ignored.
