--- a/files/en-us/web/html/global_attributes/style/index.html
+++ b/files/en-us/web/html/global_attributes/style/index.html
@@ -14,7 +14,7 @@ browser-compat: html.global_attributes.style
 <div>{{EmbedInteractiveExample("pages/tabbed/attribute-style.html","tabbed-shorter")}}</div>
 
 <div class="note">
-<p><strong>Usage note:</strong> This attribute must not be used to convey semantic information. Even if all styling is removed, a page should remain semantically correct. Typically it shouldn't be used to hide irrelevant information; this should be done using the <a href="/en-US/docs/Web/HTML/Global_attributes/hidden"><code>hidden</code></a> attribute.</p>
+<p><strong>Note:</strong> This attribute must not be used to convey semantic information. Even if all styling is removed, a page should remain semantically correct. Typically it shouldn't be used to hide irrelevant information; this should be done using the <a href="/en-US/docs/Web/HTML/Global_attributes/hidden"><code>hidden</code></a> attribute.</p>
 </div>
 
 <h2 id="Specifications">Specifications</h2>
